--- a/Vagrant/Vagrantfile
+++ b/Vagrant/Vagrantfile
@@ -13,6 +13,7 @@ Vagrant.configure("2") do |config|
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
   config.vm.box = "ubuntu/xenial64"
+  config.vm.hostname = "profiler_server"
 
   config.vm.network "forwarded_port", host_ip: "127.0.0.1", guest: 8081, host: 8081
 
