--- a/Vagrant/Vagrantfile
+++ b/Vagrant/Vagrantfile
@@ -13,11 +13,11 @@ Vagrant.configure("2") do |config|
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
   config.vm.box = "ubuntu/xenial64"
-  config.vm.hostname = "profiler_server"
+  config.vm.hostname = "profiler-server"
 
   config.vm.network "forwarded_port", host_ip: "127.0.0.1", guest: 8081, host: 8081
 
-  config.vm.synced_folder "/Users/tdiaz/workspace/", "/opt/workspace/"
+  config.vm.synced_folder "/Volumes/POOPSHOOT/workspace/Profiles-rest-api", "/opt/workspace/"
 
   config.vm.provision "shell", inline: <<-SHELL
     # Update and upgrade the server packages.
