--- a/Vagrant/Vagrantfile
+++ b/Vagrant/Vagrantfile
@@ -17,26 +17,53 @@ Vagrant.configure("2") do |config|
 
   config.vm.network "forwarded_port", host_ip: "127.0.0.1", guest: 8081, host: 8081
 
-  config.vm.synced_folder "/Volumes/POOPSHOOT/workspace/Profiles-rest-api", "/opt/workspace/"
+  config.vm.synced_folder "../", "/opt/workspace/Profiles-rest-api"
+
 
   config.vm.provision "shell", inline: <<-SHELL
     # Update and upgrade the server packages.
     sudo apt-get update
     sudo apt-get -y upgrade
+
     # Set Ubuntu Language
     sudo locale-gen en_GB.UTF-8
+
     # Install Python, SQLite and pip
     sudo apt-get install -y python3-dev sqlite python-pip
+
     # Upgrade pip to the latest version.
     sudo pip install --upgrade pip
+
     # Install and configure python virtualenvwrapper.
     sudo pip install virtualenvwrapper
     if ! grep -q VIRTUALENV_ALREADY_ADDED /home/vagrant/.bashrc; then
-        echo "# VIRTUALENV_ALREADY_ADDED" >> /home/vagrant/.bashrc
+        echo "VIRTUALENV_ALREADY_ADDED" >> /home/vagrant/.bashrc
         echo "WORKON_HOME=~/.virtualenvs" >> /home/vagrant/.bashrc
-        echo "PROJECT_HOME=/vagrant" >> /home/vagrant/.bashrc
+        echo "PROJECT_HOME=/opt/workspace/" >> /home/vagrant/.bashrc
         echo "source /usr/local/bin/virtualenvwrapper.sh" >> /home/vagrant/.bashrc
     fi
+    
+    # make directory
+    # mkdir -p $WORKON_HOME
+
+    # make a virtual environment
+    # makeVirtualEnv(){
+    #  mkvirtualenv "profiles-rest-api"
+    # }
+
+    # activate a virtual environment
+    # activateVirtualEnv(){
+    #  workon "profiles-rest-api"
+    # }
+
+    # verify the virtualenv exists if not create it
+   # if [ ! -e "$WORKON_HOME/profiles-rest-api" ]; then
+    #   echo "Creating and running profiles-rest-api environment"
+    #   makeVirtualEnv() else
+    #   echo "Virtualenv already exists and going to activate env"
+    #   activateVirtualEnv()
+    # fi
+
   SHELL
 
   # Disable automatic box update checking. If you disable this, then
